--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -3,4 +3,5 @@
   height: 10vh;
   width: 100vw;
   min-height: 150px;
+  min-width: 400px;
 }
