--- a/src/css/menubar.css
+++ b/src/css/menubar.css
@@ -3,6 +3,7 @@
   height: 20vh;
   width: 100%;
   min-height: 200px;
+  min-width: 400px;
 }
 
 .menu-bar-area {
